<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:gravity="center">

    <EditText
        android:id="@+id/etNumOne"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="Number One"
        />

    <EditText
        android:id="@+id/etNumTwo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="Number Two"
        />

    <Button
        android:id="@+id/btnSum"
        android:text="SUM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnSubtract"
        android:text="SUBTRACT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnDivide"
        android:text="DIVIDE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>